HW1/javali_tests/HW1/Multiplication.javali.err
Debug information for file: javali_tests/HW1/Multiplication.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: r1, type: int)
| | | VarDecl (name: i0, type: int)
| | | VarDecl (name: i1, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i0)
| | | | IntConst (value: 5)
| | | Assign ()
| | | | Var (name: i1)
| | | | IntConst (value: 2)
| | | Assign ()
| | | | Var (name: r1)
| | | | BinaryOp (operator: B_TIMES)
| | | | | Var (name: i1)
| | | | | IntConst (value: 3)
| | | BuiltInWrite ()
| | | | Var (name: r1)
| | | BuiltInWriteln ()
| | | Assign ()
| | | | Var (name: r1)
| | | | BinaryOp (operator: B_TIMES)
| | | | | Var (name: i0)
| | | | | Var (name: i1)
| | | BuiltInWrite ()
| | | | Var (name: r1)
| | | BuiltInWriteln ()
| | | Assign ()
| | | | Var (name: r1)
| | | | BinaryOp (operator: B_TIMES)
| | | | | BinaryOp (operator: B_TIMES)
| | | | | | BinaryOp (operator: B_TIMES)
| | | | | | | Var (name: r1)
| | | | | | | Var (name: i0)
| | | | | | Var (name: i1)
| | | | | IntConst (value: 3)
| | | BuiltInWrite ()
| | | | Var (name: r1)
| | | BuiltInWriteln ()

Phase exec failed because we expected to see:
6
10
300

But we actually saw:
Error: 139

The difference is:
At line   1 /   1:
< 6
< 10
< 300
> Error: 139

